--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <div id="load_screen"><div id="loading"><p id="loading-gif"><img src="images/load.gif"></p></div></div> 
+    <div id="load_screen"><div id="loading"><p id="loading-gif"><img src="images/load.gif" style="max-width:130%"></p></div></div> 
 
     <div id='header'>
       
